# Velib_Weather

./: Dockerfile  README.md  docker-compose.yml  kibana_dashboard.ndjson  pyproject.toml  setup_elasticsearch.sh
dags/: etl_pipeline.py  predict_bike_availability.py  station_info.py  train_models.py
jobs/extract/: fetch_station_info.py  ingest_api_data.py
jobs/load/: index_agg_to_elasticsearch.py
jobs/setup/: setup_mapping_elasticsearch.py
jobs/transform/: aggregate_fmt_to_agg.py  ml_availability_bikes.py  ml_predict_bike_availability.py  transform_raw_to_fmt.py
