[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "TM-Squared",email = "malaury.toussi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "elasticsearch (>=8.17.1,<9.0.0)",
    "pyspark (>=3.5.5,<4.0.0)",
    "boto3 (>=1.37.4,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
